# Production-Demo

./: .env  .gitignore  Makefile  collection.py  config.py  main.py  model.py  model_service.py  preperation.py  pyproject.toml  runner.py  setup.cfg
.github/actions/build-application/: action.yml
.github/workflows/: workflows.yml
app/api/: prediction.py
app/services/: model_inference.py
inference_service/.github/workflows/: lint.yml
inference_service/app/config/: model.py
inference_service/app/services/: model_inference.py
models/: rf_v1
project/: Makefile
project/.github/actions/build-application/: action.yml
project/src/: runner.py  runner_inference.py
project/src/config/: .env  db.py  logger.py
project/src/model/: model_builder.py
src/: runner.py
src/config/: config.py  logger.py  model.py
src/db/: db_model.py
src/model/: model_service.py
src/model/pipeline/: collection.py  model.py  preperation.py
