[tool.poetry]
name = "production-demo"
version = "0.1.0"
description = ""
authors = ["Adam Blanza <stevenikitaras123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
scipy = "^1.14.1"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
loguru = "^0.7.2"
sqlalchemy = "^2.0.36"
wemake-python-styleguide = "^0.19.2"
pipely = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
