[tool.poetry]
name = "inference-service"
version = "0.1.0"
description = ""
authors = ["Adam Blanza <stevenikitaras123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
pydantic = "^2.9.2"
loguru = "^0.7.2"
pydantic-settings = "^2.6.1"
scikit-learn = "^1.5.2"
wemake-python-styleguide = "^0.19.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
